; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parserInternals.c_xmlNewParserCtxt.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parserInternals.c_xmlNewParserCtxt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"cannot allocate parser context\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xmlNewParserCtxt() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @xmlMalloc(i32 4)
  %4 = inttoptr i64 %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @xmlErrMemory(i32* null, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  br label %20

9:                                                ; preds = %0
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @memset(i32* %10, i32 0, i32 4)
  %12 = load i32*, i32** %2, align 8
  %13 = call i64 @xmlInitParserCtxt(i32* %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %9
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @xmlFreeParserCtxt(i32* %16)
  store i32* null, i32** %1, align 8
  br label %20

18:                                               ; preds = %9
  %19 = load i32*, i32** %2, align 8
  store i32* %19, i32** %1, align 8
  br label %20

20:                                               ; preds = %18, %15, %7
  %21 = load i32*, i32** %1, align 8
  ret i32* %21
}

declare dso_local i64 @xmlMalloc(i32) #1

declare dso_local i32 @xmlErrMemory(i32*, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i64 @xmlInitParserCtxt(i32*) #1

declare dso_local i32 @xmlFreeParserCtxt(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
